# Nugget-LLVM-passes

./: .gitignore  CMakeLists.txt  LICENSE  README.md
pass/: CMakeLists.txt  IRBBLabelPass.cpp  IRBBLabelPass.hh  PhaseAnalysisPass.cpp  PhaseAnalysisPass.hh  PhaseAnalysisPass.hpp  PhaseBoundPass.cpp  PhaseBoundPass.hh  PluginRegistration.cpp  common.hh
src/: IRBBLabelPass.cpp  PhaseAnalysisPass.cpp  PhaseBoundPass.cpp  PhaseBoundPass.hh  common.hh
test/: CMakeLists.txt  README.md
test/IRBBLabelPass-test/: CMakeLists.txt  README.md  STRUCTURE.md
test/IRBBLabelPass-test/common/: verify_csv.cmake  verify_metadata.py
test/IRBBLabelPass-test/test1_simple/: CMakeLists.txt  test1_simple.c
test/IRBBLabelPass-test/test2_dynamic_lib/: CMakeLists.txt  test2_dynamic_lib.c
test/IRBBLabelPass-test/test3_cpp_static/: CMakeLists.txt  test3_cpp_static.cpp
test/IRBBLabelPass-test/test4_mixed/: CMakeLists.txt  fortran_part.f90  test4_mixed_cpp_fortran.cpp
test/IRBBLabelPass-test/test5_optimization/: CMakeLists.txt  capture_passes.sh  compare_optimization.sh  compare_passes.sh  compare_passes_detailed.py  compare_performance.sh  test5_optimization.c
test/IRBBLabelPass-test/test6_custom_output/: CMakeLists.txt  test6_custom_output.c
test/PhaseAnalysisPass-test/: CMakeLists.txt  README.md
test/PhaseAnalysisPass-test/common/: nugget_runtime.c  verify_instrumentation.py  verify_machine_match.py
test/PhaseAnalysisPass-test/test1_simple/: CMakeLists.txt  test1_simple.c
test/PhaseAnalysisPass-test/test2_machine_match/: CMakeLists.txt  test2_machine_match.c
test/PhaseBoundPass-test/: CMakeLists.txt  README.md
test/PhaseBoundPass-test/common/: nugget_runtime.c  verify_instrumentation.py
test/PhaseBoundPass-test/test1_simple/: CMakeLists.txt  test1_simple.c
test/PhaseBoundPass-test/test_label_only/: CMakeLists.txt  README.md
test/PhaseBoundPass-test/test_warmup_count_zero/: CMakeLists.txt  README.md
